[gd_scene load_steps=15 format=2]

[ext_resource path="res://golem3_anim.tres" type="SpriteFrames" id=1]
[ext_resource path="res://prota.gd" type="Script" id=2]
[ext_resource path="res://Atake_per1.gd" type="Script" id=3]
[ext_resource path="res://Magia_per1.gd" type="Script" id=4]
[ext_resource path="res://assets/GUI/label_HP_bg.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/label_HP.png" type="Texture" id=6]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/GUI/lifebar_bg.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/lifebar_fill.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/label_EP.png" type="Texture" id=10]
[ext_resource path="res://assets/GUI/energy_bar_bg.png" type="Texture" id=11]
[ext_resource path="res://assets/GUI/energy_bar_fill.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 28
extra_spacing_bottom = 8
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 18
extra_spacing_bottom = -3
font_data = ExtResource( 7 )

[node name="prota1" type="AnimatedSprite"]
position = Vector2( 180, 501 )
scale = Vector2( 0.25, 0.25 )
frames = ExtResource( 1 )
animation = "Idle"
frame = 8
playing = true
script = ExtResource( 2 )

[node name="menu_accion" type="Container" parent="."]
margin_left = 250.0
margin_top = -117.838
margin_right = 550.0
margin_bottom = 2.66211
rect_scale = Vector2( 3, 3 )

[node name="ataque" type="MenuButton" parent="menu_accion"]
margin_right = 100.0
margin_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 1
mouse_default_cursor_shape = 2
size_flags_stretch_ratio = 47.34
custom_constants/hseparation = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 1
text = "Ataque"
flat = false
align = 0
switch_on_hover = true
script = ExtResource( 3 )

[node name="PopupMenu2" type="PopupMenu" parent="menu_accion/ataque"]
margin_left = -300.0
margin_top = -420.0
margin_right = -280.0
margin_bottom = -400.0

[node name="magia" type="MenuButton" parent="menu_accion"]
margin_left = 100.0
margin_right = 200.0
margin_bottom = 39.0
toggle_mode = true
text = "Magia"
flat = false
align = 0
script = ExtResource( 4 )

[node name="PopupMenu2" type="PopupMenu" parent="menu_accion/magia"]
margin_right = 20.0
margin_bottom = 20.0

[node name="valores_aliados" type="MarginContainer" parent="."]
editor/display_folded = true
margin_left = -668.391
margin_top = 350.0
margin_right = 172.609
margin_bottom = 412.0
rect_scale = Vector2( 2, 2 )

[node name="constantes" type="HBoxContainer" parent="valores_aliados"]
margin_right = 841.0
margin_bottom = 62.0

[node name="vida" type="VBoxContainer" parent="valores_aliados/constantes"]
margin_right = 500.0
margin_bottom = 62.0

[node name="barra1" type="HBoxContainer" parent="valores_aliados/constantes/vida"]
margin_right = 500.0
margin_bottom = 53.0

[node name="contenedor" type="MarginContainer" parent="valores_aliados/constantes/vida/barra1"]
margin_right = 100.0
margin_bottom = 53.0

[node name="fondo" type="NinePatchRect" parent="valores_aliados/constantes/vida/barra1/contenedor"]
margin_right = 100.0
margin_bottom = 53.0
rect_min_size = Vector2( 100, 40 )
texture = ExtResource( 5 )

[node name="tipo" type="TextureRect" parent="valores_aliados/constantes/vida/barra1/contenedor/fondo"]
margin_right = 50.0
margin_bottom = 53.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="valor" type="Label" parent="valores_aliados/constantes/vida/barra1/contenedor/fondo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "10"
align = 2
valign = 2

[node name="PS" type="TextureProgress" parent="valores_aliados/constantes/vida/barra1"]
margin_left = 104.0
margin_right = 500.0
margin_bottom = 53.0
value = 50.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )

[node name="magia" type="VBoxContainer" parent="valores_aliados/constantes"]
margin_left = 504.0
margin_right = 833.0
margin_bottom = 62.0

[node name="barra2" type="HBoxContainer" parent="valores_aliados/constantes/magia"]
margin_right = 329.0
margin_bottom = 53.0

[node name="contenedor" type="MarginContainer" parent="valores_aliados/constantes/magia/barra2"]
margin_right = 75.0
margin_bottom = 53.0
rect_min_size = Vector2( 75, 53 )

[node name="fondo" type="NinePatchRect" parent="valores_aliados/constantes/magia/barra2/contenedor"]
margin_right = 75.0
margin_bottom = 53.0
texture = ExtResource( 5 )

[node name="tipo" type="TextureRect" parent="valores_aliados/constantes/magia/barra2/contenedor/fondo"]
margin_right = 50.0
margin_bottom = 53.0
texture = ExtResource( 10 )
stretch_mode = 4

[node name="valor" type="Label" parent="valores_aliados/constantes/magia/barra2/contenedor/fondo"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "50"
align = 2
valign = 1

[node name="PM" type="TextureProgress" parent="valores_aliados/constantes/magia/barra2"]
margin_left = 79.0
margin_right = 329.0
margin_bottom = 53.0
rect_min_size = Vector2( 250, 0 )
value = 10.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 12 )

[node name="potis" type="HBoxContainer" parent="valores_aliados"]
margin_right = 841.0
margin_bottom = 62.0

[connection signal="atk_esp" from="menu_accion/ataque" to="." method="_on_MenuButton_atk_esp"]
[connection signal="atk_magia_1" from="menu_accion/magia" to="." method="_on_MenuButton2_atk_magia_1"]
